<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/colored_element_background"
    android:paddingHorizontal="10dp"
    android:paddingTop="5dp"
    android:paddingBottom="10dp"
    android:orientation="vertical"
    android:layout_marginBottom="5dp"
    android:id="@+id/userPanelScrollView">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="5dp">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/round_settings_white_24dp"
            android:layout_marginEnd="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/barlow_bold"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/big_text_height"
            android:text="@string/settings"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/white_element_content_background"
        android:padding="10dp">

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/RODO_agreement"
            android:textSize="@dimen/normal_text_height"
            android:fontFamily="@font/barlow_medium"
            android:textColor="@color/colorBlack"
            android:layout_alignParentEnd="true"
            app:switchPadding="40dp"
            android:id="@+id/userRodoAgreementSwitch"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@id/userRodoAgreementSwitch">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/barlow_bold"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/normal_text_height"
                android:text="@string/choose_application_language"/>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/english"
                    android:onClick="ChooseEnglish"
                    android:fontFamily="@font/barlow_medium"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/normal_text_height"
                    android:id="@+id/englishRadioButton"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/polish"
                    android:onClick="ChoosePolish"
                    android:fontFamily="@font/barlow_medium"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/normal_text_height"
                    android:id="@+id/polishRadioButton"/>
            </RadioGroup>

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>