<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/colored_element_background"
    android:paddingHorizontal="10dp"
    android:paddingTop="5dp"
    android:paddingBottom="10dp"
    android:layout_marginBottom="5dp"
    android:orientation="vertical"
    android:id="@+id/userPanelScrollView">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="5dp">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/round_person_white_24dp"
            android:layout_marginEnd="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/barlow_bold"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/big_text_height"
            android:text="@string/user_info"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/white_element_content_background"
        android:orientation="vertical"
        android:padding="10dp">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:stretchColumns="0, 1">

            <TableRow
                android:background="@drawable/text_view_background"
                android:paddingVertical="3dp"
                android:paddingHorizontal="10dp"
                android:layout_marginBottom="3dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_name"
                    android:fontFamily="@font/barlow_medium"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/normal_text_height" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/barlow_bold"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/normal_text_height"
                    android:id="@+id/userNameTextView"/>

            </TableRow>

            <TableRow
                android:background="@drawable/text_view_background"
                android:paddingVertical="3dp"
                android:paddingHorizontal="10dp"
                android:layout_marginVertical="3dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/normal_text_height"
                    android:text="@string/user_surname"
                    android:fontFamily="@font/barlow_medium"
                    android:textColor="@color/colorBlack" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/normal_text_height"
                    android:fontFamily="@font/barlow_bold"
                    android:textColor="@color/colorBlack"
                    android:id="@+id/userSurnameTextView"/>

            </TableRow>

            <TableRow
                android:background="@drawable/text_view_background"
                android:paddingVertical="3dp"
                android:paddingHorizontal="10dp"
                android:layout_marginVertical="3dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/normal_text_height"
                    android:text="@string/user_index_number"
                    android:fontFamily="@font/barlow_medium"
                    android:textColor="@color/colorBlack" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/normal_text_height"
                    android:fontFamily="@font/barlow_bold"
                    android:textColor="@color/colorBlack"
                    android:id="@+id/indexNumberTextView"/>

            </TableRow>

            <TableRow
                android:background="@drawable/text_view_background"
                android:paddingVertical="3dp"
                android:paddingHorizontal="10dp"
                android:layout_marginVertical="3dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/normal_text_height"
                    android:text="@string/username"
                    android:fontFamily="@font/barlow_medium"
                    android:textColor="@color/colorBlack" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/normal_text_height"
                    android:fontFamily="@font/barlow_bold"
                    android:textColor="@color/colorBlack"
                    android:id="@+id/usernameInfoTextView"/>

            </TableRow>

            <TableRow
                android:background="@drawable/text_view_background"
                android:paddingVertical="3dp"
                android:paddingHorizontal="10dp"
                android:layout_marginVertical="3dp"
                android:layout_marginBottom="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/normal_text_height"
                    android:text="@string/id"
                    android:fontFamily="@font/barlow_medium"
                    android:textColor="@color/colorBlack" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/normal_text_height"
                    android:fontFamily="@font/barlow_bold"
                    android:textColor="@color/colorBlack"
                    android:id="@+id/userIdTextView"/>

            </TableRow>

        </TableLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/new_username"
                android:fontFamily="@font/barlow_regular"
                android:textSize="@dimen/normal_text_height"
                android:layout_toStartOf="@+id/changeUsernameButton"
                android:id="@+id/usernameEditText"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_background"
                android:text="@string/change_username"
                android:fontFamily="@font/barlow_bold"
                android:textColor="@color/colorWhite"
                android:textAllCaps="false"
                android:textSize="@dimen/normal_text_height"
                android:paddingHorizontal="10dp"
                android:layout_alignParentEnd="true"
                android:layout_alignTop="@id/usernameEditText"
                android:layout_marginStart="20dp"
                android:minHeight="0dp"
                android:height="@dimen/button_height"
                android:id="@+id/changeUsernameButton"/>

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>